force-app/main/default/objects/Customer_Agreement_Account_Link__c/Customer_Agreement_Account_Link__c.object-meta.xml
<CustomObject>
    <label>Customer Agreement Account Link</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Customer Agreement Account Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Agreement Account Links</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>