force-app/main/default/objects/Customer_Agreement_Account_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Field to store Account Id</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Group__c</field>
            <operation>notEqual</operation>
            <value>Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Agreement Account Links</relationshipLabel>
    <relationshipName>Customer_Agreement_Account_Links</relationshipName>
    <type>Lookup</type>
</CustomField>