force-app/main/default/objects/Customer_Agreement_Account_Link__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Field to store Agreement type</description>
    <formula>TEXT ( Customer_Agreement__r.Agreement_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Type</label>
    <type>Text</type>
</CustomField>