force-app/main/default/objects/Customer_Agreement_Account_Link__c/fields/Customer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreement__c</fullName>
    <description>Field to store Customer Agreement</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Agreement</label>
    <referenceTo>Customer_Agreement__c</referenceTo>
    <relationshipLabel>Customer Agreement Account Links</relationshipLabel>
    <relationshipName>Customer_Agreement_Account_Links</relationshipName>
    <type>Lookup</type>
</CustomField>