force-app/main/default/objects/Customer_Agreement_Account_Link__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Field to store End date</description>
    <formula>TEXT ( Customer_Agreement__r.End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Text</type>
</CustomField>