force-app/main/default/objects/Customer_Agreement_Account_Link__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Field to store start date</description>
    <formula>TEXT ( Customer_Agreement__r.Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Text</type>
</CustomField>